Focus and spot labels.

--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -130,14 +130,15 @@ After restarting, you should find the command \menu{Plugins > Mastodon (preview)
     \includegraphics[width=0.7\textwidth]{figures/Mastodon_UpdateSite.png}
 \end{center}
 
-
-
 \subsection{Creating a new Mastodon project.}
 
 After launching the command, this plain, sober window appears.
-\begin{center}
-         \includegraphics[width=0.3\textwidth]{figures/Mastodon_MainWindow.png}
-\end{center}
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.3\textwidth]{figures/Mastodon_MainWindow.png}
+    \caption{The main window of Mastodon.}
+    \label{fig:MastodonMainWindow}
+\end{figure}
 
 Click on new \texttt{new project}, and browse to the \texttt{datasethdf5.xml} file of the XML/HDF5 file pair of the tutorial dataset.
 All the buttons that were grayed out should be enabled. 
