--- a/src/TableTrackSchemeNavigationKeys.tex
+++ b/src/TableTrackSchemeNavigationKeys.tex
@@ -7,22 +7,22 @@
     \multicolumn{2}{c}{\textit{View.}}
     \\ \midrule
     
-    Move around.                    & \keys{Right-click} and \keys{Drag} or \keys{Mouse-wheel}.
+    Move around.                    & \keys{Right-click} and \keys{Drag} or \keys{Mouse-wheel}
     \\ \midrule
     
-    Zoom / unzoom in X.             & \keys{Shift+Mouse-wheel}.
+    Zoom / unzoom in X.             & \keys{Shift+Mouse-wheel}
     \\ \midrule
     
-    Zoom / unzoom in Y.             & \keys{Control+Mouse-wheel}.
+    Zoom / unzoom in Y.             & \keys{Control+Mouse-wheel}
     \\ \midrule
     
-    Zoom / unzoom in X \& Y.         & \keys{Control+Shift+Mouse-wheel}.
+    Zoom / unzoom in X \& Y.         & \keys{Control+Shift+Mouse-wheel}
     \\ \midrule
 
     Full zoom, full unzoom.         & Press \keys{Z}. The view zoom at max level to the mouse location. Pressing  \keys{Z} again to unzoom fully.
     \\ \midrule
     
-    Zoom in a box.                  & Press and hold \keys{Z}, then drag a box. The view will zoom to the box.                            
+    Zoom in a box.                  & Press and hold \keys{Z} then drag a box. The view will zoom to the box.                            
     \\ \bottomrule
 
 \end{tabulary}
