--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -120,8 +120,9 @@ Parenthetically, notice that the focus is shared across all opened views.
 If you have a TrackScheme view and a BDV view opened, and that they show show roughly the same spot, setting the focus in one view will update the spot display in the other views.
 
 When you are in a BDV view and have set the focus, you can also navigate with the arrow keys.
-But in these views, only navigating in time (\keys{\arrowkeyup} and \keys{\arrowkeydown}) will work.
-Also you cannot edit the spot labels in a BDV view.
+After clicking inside a cell, you can navigate in time and follow a cell lineage through the movie with \keys{\arrowkeyup} and \keys{\arrowkeydown}.
+If you reach the border of the view or if the cell moves in Z, the view will be translated to keep the cell in focus.
+However, you cannot edit the spot labels in a BDV view nor jump from one track to another with \keys{\arrowkeyleft} \keys{\arrowkeyright}.
 
 
 
