--- a/src/TableFocusKeys.tex
+++ b/src/TableFocusKeys.tex
@@ -19,7 +19,7 @@
     \multicolumn{2}{c}{\textit{Focus in BDV.}}
     \\ \midrule
     
-    Move the focus across time within a track.      & \keys{\arrowkeyup} and \keys{\arrowkeydown}
+   Follow a spot across time within a track with the focus.      & \keys{\arrowkeyup} and \keys{\arrowkeydown}
   \\ \bottomrule
   
 \end{tabulary}
