TrackScheme images and sync views.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -144,6 +144,9 @@
 % Wrap figures around text.
 \usepackage{wrapfig}
 
+% Caption style for suib-figures.
+\captionsetup[subfigure]{position=top, labelfont=bf, textfont=normalfont, singlelinecheck=off, justification=raggedright, labelformat=simple, labelsep=period}
+
 
 
 %---------------------------------------------------------------------------------
@@ -167,7 +170,7 @@
 \part{Tutorials.}
 
 \newpage
-\input{ src/Chapter2.tex }
+% \input{ src/Chapter2.tex }
 
 \newpage
 \input{ src/Chapter3.tex }
