--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,17 @@
+@ARTICLE{Sage2005,
+    AUTHOR="Sage, D. and Neumann, F.R. and Hediger, F. and Gasser, S.M. and
+            Unser, M.",
+    TITLE="Automatic Tracking of Individual Fluorescence Particles:
+            {A}pplication to the Study of Chromosome Dynamics",
+    JOURNAL="{IEEE} Transactions on Image Processing",
+    YEAR="2005",
+    volume="14",
+    number="0",
+    pages="1372--1383",
+    month="September",
+    note=""
+}
+
 @article{McDole2018,
    author = {McDole, Katie and Guignard, Léo and Amat, Fernando and Berger, Andrew and Malandain, Grégoire and Royer, Loïc A. and Turaga, Srinivas C. and Branson, Kristin and Keller, Philipp J.},
    title = {<em>In Toto</em> Imaging and Reconstruction of Post-Implantation Mouse Development at the Single-Cell Level},
